# UR5-Data-IO

./: README.md
universal_robot/ur5_moveit_config/config/: controllers.yaml
universal_robot/ur_description/urdf/: common.gazebo.xacro
ur5_script_with_rg2/: CMakeLists.txt  Joint_position.txt  Joint_velocities.txt  package.xml
ur5_script_with_rg2/results/: Joint_position.txt  Joint_velocities.txt
ur5_script_with_rg2/scripts/: pih.sh  sh-beifen  test_main.py  test_main1.py  util.py  zkzp.sh  运行sh
ur5_script_with_rg2/src/: listener.cpp
